Add pagination to get_all requests
