# taskrs-server/openapi.yml
@@ -109,15 +109,59 @@ paths:
         - permissions
       security:
         - bearerAuth: [ ]
+      parameters:
+        - in: query
+          name: query
+          schema:
+            type: string
+        - in: query
+          name: orderBy
+          schema:
+            type: string
+            enum: [id, name, group, description, updatedAt, createdAt]
+        - in: query
+          name: order
+          schema:
+            type: string
+            enum: [ascending, descending]
+        - in: query
+          name: page
+          schema:
+            type: integer
+            format: int32
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            format: int32
       responses:
         200:
           description: A JSON array of permissions
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Permission'
+                type: object
+                properties:
+                  page:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  pageCount:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  pageSize:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  totalCount:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Permission'
         403:
           description: User does not have necessary permission/s
           content:
@@ -213,15 +257,59 @@ paths:
         - users
       security:
         - bearerAuth: []
+      parameters:
+        - in: query
+          name: query
+          schema:
+            type: string
+        - in: query
+          name: orderBy
+          schema:
+            type: string
+            enum: [id, email, password, firstName, lastName, activated, updatedAt, createdAt]
+        - in: query
+          name: order
+          schema:
+            type: string
+            enum: [ascending, descending]
+        - in: query
+          name: page
+          schema:
+            type: integer
+            format: int32
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            format: int32
       responses:
         200:
-          description: A JSON array of users
+          description: A page object with users
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
+                type: object
+                properties:
+                  page:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  pageCount:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  pageSize:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  totalCount:
+                    type: integer
+                    format: int32
+                    nullable: true
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/User'
         403:
           description: User does not have necessary permission/s
           content:
@@ -265,6 +353,27 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    PaginationPage:
+      type: object
+      properties:
+        page:
+          type: integer
+          format: int32
+          nullable: true
+        pageCount:
+          type: integer
+          format: int32
+          nullable: true
+        pageSize:
+          type: integer
+          format: int32
+          nullable: true
+        totalCount:
+          type: integer
+          format: int32
+          nullable: true
+        items:
+          type: array
     Permission:
       type: object
       properties:
