# taskrs-server/src/models/request_filter.rs
@@ -1,0 +1,18 @@
+use serde::{Deserialize, Serialize};
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct RequestFilter<T> {
+    pub query: Option<String>,
+    pub order_by: Option<T>,
+    pub order: Option<Order>,
+    pub page: Option<i32>,
+    pub limit: Option<i32>,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub enum Order {
+    Ascending,
+    Descending,
+}
